--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Helicopter Ride</string>
-    <string name="flash_text">Press on the screen to start</string>
+    <string name="flash_text">Touch on the screen to start</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-1300395620912543/7619954511</string>
     <string name="banner_ad_unit_id">ca-app-pub-1300395620912543/4747213311</string>
     <string name="app_id">ca-app-pub-1300395620912543~6143221316</string>
